# vantage

./: .gitignore  .trigger  .vercelignore  AGENTS.md  CLAUDE.md  COMMIT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMAGE_OPTIMIZATION.md  PERFORMANCE_CHECKLIST.md  PRD.md  PRODUCT.md  README.md  SECURITY_FIXES.md  SETUP_COMPLETE.md  create_tables.py  global-packages.txt  main.py  requirements.txt  seed_production.py  start-backend.bat  start.bat  test_signup.py  test_supabase.py  vercel.json
.claude/: settings.local.json
.codex/: config.toml
api/: Cargo.toml  __init__.py  index.py  index.rs  requirements.txt
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  __init__.py  config.py  main.py  migrate_comment_pictures.py  requirements.txt  test_backend.py
backend/.cargo/: config.toml
backend/database/: document_store.py  mongodb.py  supabase.py
backend/models/: activity.py  auth.py  business.py  claim.py  deal.py  reviews.py  saved.py  subscription.py  user.py
backend/repositories/: factory.py  saved.py  subscriptions.py  users.py
backend/routes/: activity.py  businesses.py  claims.py  deals.py  discovery.py  location.py  reviews.py  saved.py  subscriptions.py  users.py
backend/services/: business_metadata.py  demo_seed.py  geo_service.py  google_places.py  local_business_classifier.py  match_score.py  photo_proxy.py  stripe_service.py  visibility_score.py
backend/src/: config.rs  errors.rs  jwt.rs  lib.rs  main.rs  security.rs  state.rs
backend/src/db/: mod.rs  mongo.rs  supabase.rs
backend/src/middleware/: auth.rs  rate_limit.rs  security_headers.rs
backend/src/models/: activity.rs  business.rs  claim.rs  deal.rs  review.rs  saved.rs  subscription.rs  user.rs
backend/src/routes/: activity.rs  auth.rs  businesses.rs  campaigns.rs  claims.rs  conversion_analytics.rs  customer_events.rs  deals.rs  discovery.rs  location.rs  mod.rs  reviews.rs  saved.rs  subscriptions.rs  support.rs  users.rs
backend/src/services/: geo_service.rs  google_places.rs  mod.rs  recaptcha.rs  stripe.rs  visibility_score.rs
backend/tests/: test_explore_discovery_regressions.py  test_security_hardening.py
backend/utils/: __init__.py  audit.py  security.py
(+125 files in other folders)
